# klay

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CoRe.py  LICENSE  README.md  env.sh  get_env.sh  in.yaml  init_nequip.py  klay.py  mixture_15k.yml  model.py  pack.sh  pyproject.toml  requirements.txt  setup.py  simple_nequip.py  train_2d_patterns.py  trainer.py  utils.py
data/: convert.py  dataset_Si_Cubuck_full_stride_20_indices.txt  dataset_gap_Si-no_1_atom_indices.txt
demo/: Si4.xyz  Si_nequip_EF.pt  demo.py
docs/: advance.rst  api.rst  conf.py  index.rst  intro.rst  kliff.rst  requirements.txt  usage.rst
example/: arbitrary_and_alias.yaml  eval_example.py  get_model.py  mace_eval_example.py  mace_model.yaml  mace_model_layers.yaml  model.yaml  new_model.yaml  new_model_layers.yaml  train_mace.py
klay/: __init__.py  klay.py  layer_types.py
klay/builder/: __init__.py  builder.py  chain.py  dag.py  fx_builder.py  named_dag.py
klay/cli/: __init__.py  export.py  layers.py  types.py  validate.py
klay/core/: __init__.py  categories.py  layer_types.py  node.py  registry.py
klay/io/: load_config.py
klay/layers/: __init__.py  _arbitrary.py  _atomwise.py  _autograd_forces.py  _base.py  _convnetlayer.py  _e3_transformer.py  _interaction_and_radial_attention.py  _interaction_block.py  _non_linear.py  cutoffs.py  radial_basis.py
klay/registry/: __init__.py
klay/spec/: __init__.py  interpolate.py  named_ports.py  (+2 more)
layers/: __init__.py  _atomwise.py  _convnetlayer.py  _interaction_block.py
tests/: test_model_building.py
workdir/: train.yaml
(+21 files in other folders)
