[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KLAY"
version = "0.9.6"
description = "A Python package for generating ML layers for MLIPs"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"

authors = [
  {name = "Amit Gupta", email = "gupta839@umn.edu"},
]

license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

urls = {Homepage = "https://github.com/openkim/KLAY"}

dependencies = [
  "torch",
  "torch_runstats",
  "e3nn",
  "pyyaml",
  "networkx",
  "omegaconf",
  "click",
  "rich",
  "pydot",
]

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
include = ["klay", "klay.*"]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "black>=24.4",          # code formatter
  "isort>=5.13",          # still useful for pyproject-style profiles
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-select = ["I"]          # ruff-isort rules
# Exclude rules that Black already handles:
ignore = ["E501", "W191"]

[tool.isort]
profile = "black"
line_length = 100

[project.scripts]
klay = "klay.cli:cli"
